configs/namespaces/microservices-demo-bad/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices-demo-bad
  labels:
    owner: John-Doe
