configs/namespaces/microservices-demo-bad/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: microservices-demo-bad
spec:
  ingress: []
  podSelector: {}
